k8s/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-presence
  labels:
    app: api-gateway-presence
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway-presence
  template:
    metadata:
      labels:
        app: api-gateway-presence
    spec:
      containers:
        - name: api-gateway
          image: doorkaz/api-gateway:latest   #cambiar despues
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
