k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: presence-service
  labels:
    app: presence-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: presence-service
  template:
    metadata:
      labels:
        app: presence-service
    spec:
      containers:
        - name: presence-service
          image: doorkaz/presence-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /api/v1.0.0/presence/health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/v1.0.0/presence/health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
