k8s/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-presence
spec:
  selector:
    app: api-gateway-presence
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
