k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: presence-service
  labels:
    app: presence-service
spec:
  selector:
    app: presence-service
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
