k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: presence-service-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  tls:
  - hosts:
    - demo.inf326.nursoft.dev
    secretName: letsencrypt
  rules:
  - host: demo.inf326.nursoft.dev
    http: &demo_rules
      paths:
      - path: /presence-service
        pathType: Prefix
        backend:
          service:
            name: presence-service
            port:
              number: 8000
